--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,8 @@
 
 @plugin '@tailwindcss/forms';
 
+@source '../views/**/*.blade.php';
+
 @theme {
   --font-sans:
     Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
